[package]
name = "bed-utils"
description = "Utilities for manipulating genomic range objects"
version = "0.6.0"
edition = "2021"
rust-version = "1.76"
authors = ["Kai Zhang <kai@kzhang.org>"]
license = "MIT"
repository = "https://github.com/kaizhang/bed-utils"

[dependencies]
num-traits = "0.2"
num = "0.4"
byteorder = "1.5"
itertools = "0.13"
indexmap = "2.5"
lexical = "6.1"
lz4 = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tempfile = "3.3"
rayon = "1.10"

[dev-dependencies]
criterion = "0.3"
flate2 = "1.0"
rstest = "0.19"
rand = "0.8.0"

[[bench]]
name = "main"
harness = false
